# fizzbot-2

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
discord-bot/: Cargo.toml
discord-bot/src/: main.rs
llm/: Dockerfile  README.md  decode.py  gen_training_data.py  run.py  run.py.old  run_config.yaml  train.py  train_config.yaml  train_config_cpu.yaml
