[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fizzbot-llm"
version = "0.1.0"
description = "Training utilities for fizzbot chat LLM."
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
  "torch>=2.1.0",
  "transformers>=4.41.0",
  "accelerate>=0.26.0",
  "bitsandbytes",
  "peft",
  "hf-transfer>=0.1.9",
]

[project.optional-dependencies]
lora = ["peft>=0.11.0"]
qlora = ["bitsandbytes>=0.43.0", "peft>=0.11.0"]

[tool.setuptools]
packages = []


[tool.uv]
# Define the package index for PyTorch with CUDA support
[[tool.uv.index]]
name = "pytorch-cu12"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
# Explicitly tell uv to pull torch from the index defined above
torch = { index = "pytorch-cu12" }
# You likely want these as well if you use them:
torchvision = { index = "pytorch-cu12" }
torchaudio = { index = "pytorch-cu12" }

