[package]
name = "discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
json = "0.12.4"
poise = "0.6.1"
serde = "1.0.228"
serde_json = "1.0.147"
once_cell = "1.21.3"
serenity = "0.12.5"
tokio = { version = "1.48.0", features = ["io-util", "macros", "process", "rt-multi-thread", "sync"] }
rand = "0.8"
